--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+--find-links https://download.pytorch.org/whl/torch_stable.html
 notebook ~= 6.0.3
+torch == 1.8.0+cu111
+torchvision == 0.9.0+cu111
+torchaudio == 0.8.0
+torch-summary ~= 1.4.5
 matplotlib ~= 3.3.1
 nbimporter ~= 0.3.4
 numpy ~= 1.18.5
 pandas ~= 1.1.2
 seaborn ~= 0.11.0
 scikit-learn ~= 0.23.2
-torch ~= 1.8.0+cu111
-torch-summary ~= 1.4.5
 tqdm ~= 4.49.0
-transformers ~= 3.3.1
+transformers
 wordcloud ~= 1.8.1
